fix: overflow of equipment__video

--- a/src/scss/components/_equipment.scss
+++ b/src/scss/components/_equipment.scss
@@ -36,7 +36,6 @@
         margin: 0 0 2.125rem;
         width: 100%;
         height: 0;
-        overflow: hidden;
         video {
             position: absolute;
             top: 50%;
